# Ormayundo

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
demo/: README.md  demo.tape  replay.py
docs/: index.html
docs/superpowers/specs/: 2026-07-21-ormayundo-design.md
openspec/changes/ormayundo-mvp/: design.md  proposal.md  tasks.md
openspec/changes/ormayundo-mvp/specs/claude-plugin/: spec.md
openspec/changes/ormayundo-mvp/specs/knowledge-graph-memory/: spec.md
openspec/changes/ormayundo-mvp/specs/mcp-server/: spec.md
ormayundo/: __init__.py  config.py  mcp_server.py
ormayundo/core/: embed.py  ingest.py  recall.py  store.py
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
