[project]
name = "ormayundo"
version = "0.1.0"
description = "Persistent long-term memory for AI agents, backed by a self-hosted knowledge graph."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "mcp>=1.2",
]

[project.scripts]
ormayundo-mcp = "ormayundo.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ormayundo"]
